; ModuleID = '/home/carl/AnghaBench/twemproxy/src/hashkit/extr_nc_md5.c_md5_signature.c'
source_filename = "/home/carl/AnghaBench/twemproxy/src/hashkit/extr_nc_md5.c_md5_signature.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @md5_signature(i8* %0, i64 %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = call i32 @MD5_Init(i32* %7)
  %9 = load i8*, i8** %4, align 8
  %10 = load i64, i64* %5, align 8
  %11 = call i32 @MD5_Update(i32* %7, i8* %9, i64 %10)
  %12 = load i8*, i8** %6, align 8
  %13 = call i32 @MD5_Final(i8* %12, i32* %7)
  ret void
}

declare dso_local i32 @MD5_Init(i32*) #1

declare dso_local i32 @MD5_Update(i32*, i8*, i64) #1

declare dso_local i32 @MD5_Final(i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
